<resources>
    <string name="app_name">One Ticket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_cards">All Cards</string>
    
    <string name="card_add">Pridėti kortelę</string>
    <string name="card_add_info">Norint sujungti kortelę pridėkite ją prie telefono nugarėlės</string>
    <string name="card_id">902467749064</string>
    <string name="card_name">Vardenis</string>
    <string name="card_lname">Pavardenis</string>
    <string name="card_valid_time">Galioja iki 2024-08-01</string>

    
</resources>
